--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
     width: 1000px;
     height: 600px;
     border-radius: 50px;
-    box-shadow: rgb(83, 83, 83) 15px 2px 100px;
+    box-shadow: rgba(0, 0, 0, 0.404) 10px -15px 200px;
     margin: auto;
     margin-top: 50px;
     padding: 30px;
@@ -29,7 +29,7 @@ body{
     font-size: 30px;
     text-align: center;
 }
-.player .Score{
+.player .TotalScore{
     font-size: 50px;
     text-align: center;
     margin-top: 80px;
@@ -46,7 +46,7 @@ body{
     margin-left: 360px;
 }
 
-.TotalScr{
+.Score{
     font-size: 60px;
     position: relative;
     top: 150px;
@@ -74,14 +74,22 @@ button{
 }
 .buttons{
 text-align: center;
-margin-top: -240px;
+position: absolute;
+bottom: 110px;
+left: 677px;
 }
 
-.totalScr{
+.Score{
     font-size: 50px;
 }
 
 .playing{
+    height: 400px;
     color: green;
-  
+    background-color: rgba(128, 255, 0, 0.342);
+    border-radius: 10px;
+}
+#Startgame{
+    position: absolute;
+    left: 675px;
 }
